--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"short_name": "Restaurant Reviews",
+	"short_name": "Rest-Reviews",
 	"name": "Restaurant Reviews",
 	"start_url": "/index.html",
 	"scope": ".",
